WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301717
Temporal: toString() returns wrong results for certain Instants with negative microseconds/nanoseconds
https://bugs.webkit.org/show_bug.cgi?id=301717
Summary
Temporal: toString() returns wrong results for certain Instants with negative...
Tim Chevalier
Reported
2025-10-30 15:00:04 PDT
The following: ``` (new Temporal.Instant(-1000000000000001000n)).toString() ``` prints ``` "1938-04-24T22:13:20.999999Z" ``` The result should be: ``` 1938-04-24T22:13:19.999Z ```
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Chevalier
Comment 1
2025-10-30 15:06:08 PDT
Correction: the result should be: ``` '1938-04-24T22:13:19.999999Z' ```
Tim Chevalier
Comment 2
2025-10-30 15:10:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53223
EWS
Comment 3
2025-11-02 15:49:36 PST
Committed
302460@main
(6294e8df2ea0): <
https://commits.webkit.org/302460@main
> Reviewed commits have been landed. Closing PR #53223 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-11-02 15:50:12 PST
<
rdar://problem/163901281
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug