[Temporal] Fix Instant toString() for certain instants with negative micro/nanoseconds https://bugs.webkit.org/show_bug.cgi?id=301717

Reviewed by Yusuke Suzuki.

Temporal.Instant.toString should use floorEpochMilliseconds() instead
of epochMilliseconds() (see comments in code for the reasoning).

* JSTests/stress/temporal-instant.js:
(shouldNotBe):
* Source/JavaScriptCore/runtime/TemporalInstant.cpp:

Canonical link: https://commits.webkit.org/302460@main